# hits

./: .gitignore  README.md  pyproject.toml  setup.py
code/: .gitignore  setup.py
code/Sequencing/: adapters.py  adapters_cython.pyx  annotation.py  external_sort.py  fasta.py  fastq.py  fastq_cython.pyx  genetic_code.py  genomes.py  gff.py  intensities_illumina.py  interval.py  ipython.py  mapping_tools.py  paired_end.py  sam.py  sw.py  sw_cython.pyx  utilities.py  visualize_structure.py
code/Sequencing/Parallel/: __init__.py  launcher.py  map_reduce.py  split_file.py  split_sra_file.py
code/Sequencing/Serialize/: RPKMs.py  __init__.py  array_1d.py  array_2d.py  array_3d.py  codon_counts.py  counts.py  coverage.py  expression.py  fast_mismatches.py  log.py  mismatches.py  read_positions.py  read_positions_hdf5.py  ref_positions.py
code/Sequencing/Test/: test_split.py
code/Sequencing/Visualize/: __init__.py  example_df.txt  fastq.py  gels.py  igv_colors.py  interactive.py  lines_top_group.coffee  scatter_grid.coffee  setup.py  (+2 more)
hits/: adapters.py  adapters_cython.pyx  annotation.py  bus.py  cloning.py  fasta.py  fastq.py  fastq_cython.pyx  genetic_code.py  genomes.py  gff.py  intensities_illumina.py  interval.py  mapping_tools.py  paired_end.py  restriction.py  sam.py  sw.py  sw_cython.pyx  utilities.py  variants.py  visualize_structure.py
hits/parallel/: launcher.py  map_reduce.py  split_file.py  split_sra_file.py
hits/serialize/: log.py  ref_positions.py
hits/test/: test_sam.py  test_split.py
hits/visualize/: __init__.py  callback.py  fastq.py  gels.py
(+104 files in other folders)
