[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "hits"
authors = [
    {name = "Jeff Hussmann", email = "jeff.hussmann@gmail.com"},
]
description = "Utilities for processing high-throughput sequencing experiments"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
    "biopython>=1.72",
    "bokeh>=3.2",
    "ipython>=7.8.0",
    "ipywidgets>=7.4.2",
    "matplotlib>=3.0.2",
    "numpy>=1.15.4",
    "pandas>=0.23.4",
    "pillow>=5.3.0",
    "pysam>=0.15.1",
    "pyyaml>=3.13",
    "s3fs",
    "scipy>=1.2.1",
    "seaborn>=0.11.0",
    "statsmodels>=0.12.1",
]

[project.urls]
Repository = "https://github.com/jeffhussmann/hits.git"

[tool.setuptools]
packages = [
    'hits',
    'hits.parallel',
    'hits.test',
    'hits.serialize',
    'hits.visualize',
    'hits.visualize.interactive',
]

ext-modules = [
    {name = "hits.adapters_cython", sources = ["hits/adapters_cython.pyx"]},
    {name = "hits.fastq_cython", sources = ["hits/fastq_cython.pyx"]},
    {name = "hits.sw_cython", sources = ["hits/sw_cython.pyx"]},
]

[tool.setuptools.dynamic]
version = {attr = "hits.__version__"}
